# ai-agent-scanner

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GITHUB_SETUP.md  PRODUCT_STRATEGY.md  PROJECT_STATUS.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SETUP_COMMANDS.md  app.py  cli.py  pyproject.toml  requirements.txt  scanner_cli.py
.github/workflows/: ci.yml
data/signatures/: ai_services.json
docs/: shadow-ai-discovery-post.md
src/: __init__.py
src/compliance/: __init__.py  compliance_engine.py
src/discovery/: __init__.py  cloud_scanner.py  code_scanner.py  discovery_engine.py  network_scanner.py  traffic_analyzer.py
src/frameworks/: __init__.py  mitre_atlas.py  owasp_llm_top10.py
src/reporting/: __init__.py  report_generator.py  sarif_output.py
src/risk/: __init__.py  risk_assessor.py
src/security/: __init__.py  access_control_tests.py  data_privacy_tests.py  prompt_injection_tests.py  security_engine.py
src/utils/: auth.py  database.py  helpers.py  request_builder.py
static/js/: dashboard.js
templates/: dashboard.html
tests/: test_frameworks.py  test_security_modules.py
