[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-scanner"
version = "1.1.0"
description = "Discover, assess, and secure AI agents across your infrastructure"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Scott Thornton", email = "scthornton@gmail.com" },
]
keywords = [
    "ai-security", "llm-security", "prompt-injection", "owasp",
    "vulnerability-scanner", "ai-agent", "mitre-atlas", "defensive-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "aiohttp>=3.9.0",
    "click>=8.0.0",
    "dnspython>=2.4.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
cloud = [
    "boto3>=1.34.0",
    "azure-identity>=1.15.0",
    "google-cloud-asset>=3.22.0",
]

[project.scripts]
ai-agent-scanner = "scanner_cli:cli"

[project.urls]
Homepage = "https://github.com/scthornton/ai-agent-scanner"
Repository = "https://github.com/scthornton/ai-agent-scanner"
Issues = "https://github.com/scthornton/ai-agent-scanner/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["src*"]
